--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
-<H1>Hej !!!</H1>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+	 <link href="styles/style.css" rel="stylesheet" type="text/css" />
+    <title>Ausohnum</title>
+  </head>
+  <body>
+    <img src="images/logo-ausohnum.png" alt="logo ausonius" />
+	<h1>Les Humanités numériques à Ausonius</h1>
+	<p>Le pôle des humanités numériques est impliqué dans tous les programmes du laboratoire <a href="https://ausonius.u-bordeaux-montaigne.fr">Ausonius</a>, à chacune des étapes de la recherche :
+</p>
 
+<ul>
+  <li>Acquisition des données</li>
+  <li>Traitement des données</li>
+  <li>Analyse de données</li>
+</ul>
+
+<p> mais aussi la diffusion web des données enrichies de la recherche ( indexation et exposition normées, valorisation et pérennisation des contenus).</p>
+  </body>
+</html>
