--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	     rel="stylesheet"
 	     type="text/css" />
 	 <link href="styles/style.css" rel="stylesheet" type="text/css" />
-    <title>Ausohnum</title>
+    <title>ausoHNum</title>
   </head>
   <body>
     <img src="images/logo-ausohnum.png" alt="logo ausonius" />
